--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bkash-payment-gateway": "^2.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -19,7 +20,9 @@
     "mongoose": "^6.6.5",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "sslcommerz": "^1.6.6",
     "stripe": "^10.17.0",
-    "uid": "^2.0.1"
+    "uid": "^2.0.1",
+    "uuid": "^9.0.0"
   }
 }
